Changed the logout link in the spree navbar to do a GET request instead of DELETE.

--- a/app/views/spree/shared/_login_bar.html.erb
+++ b/app/views/spree/shared/_login_bar.html.erb
@@ -1,6 +1,6 @@
 <% if spree_current_user %>
   <li>
-    <%= link_to Spree.t(:logout), spree_logout_path, :method => :delete %>
+    <%= link_to Spree.t(:logout), spree_logout_path, :method => :get %>
   </li>
 <% else %>
   <li>
