Added new spree layouts directory to make Spree store style consistent.

--- a/app/views/spree/shared/_login_bar.html.erb
+++ b/app/views/spree/shared/_login_bar.html.erb
@@ -1,7 +1,11 @@
 <% if spree_current_user %>
   <li>
+    <a href="/<%= spree_current_user.id %>">Welcome, <%= spree_current_user.first_name %></a>
+  </li>
+  <li>
     <%= link_to Spree.t(:logout), spree_logout_path, :method => :get %>
   </li>
+  
 <% else %>
   <li>
     <%= link_to Spree.t(:signin), spree_login_path %>
