About me section of a user profile page now works. We need to use Ajax so user wont be redirected to a different page.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,9 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %></div>
 
+  <%= f.label :about_me %><br>
+  <%= f.text_area :about, placeholder: "Tell us about yourself." %>
+
   <div><%= f.submit "Update" %></div>
 <% end %>
 
