--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="col-md-6">
     <h1>
-      <%= @product.title %>
+      <%= best_in_place @product, :title %>
     </h1>
     <%= image_tag @product.photo.url %>
     <p>
