--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,60 +22,16 @@
 	</div><!-- /.container -->
 </section>
 
-
 <section id="welcome-product-grid">
-	<div class="col-sm-4 col-xs-6 welcome-product">
-		<a href="#">
-			<%= image_tag("brownies.jpg", class: "img-responsive") %>
-			<div class="seller-info">
-				<h3 class="seller-name">Seller Name</h3>
-				<p class="product-descr">Product Decription Here</p>
-			</div>
-		</a>
-	</div>
-	<div class="col-sm-4 col-xs-6 welcome-product">
-		<a href="#">
-			<%= image_tag("blueberry.jpg", class: "img-responsive") %>
-			<div class="seller-info">
-				<h3 class="seller-name">Seller Name</h3>
-				<p class="product-descr">Product Decription Here</p>
-			</div>
-		</a>
-	</div>
-	<div class="col-sm-4 col-xs-6 welcome-product">
-		<a href="#">
-			<%= image_tag("dessert.jpg", class: "img-responsive") %>
-			<div class="seller-info">
-				<h3 class="seller-name">Seller Name</h3>
-				<p class="product-descr">Product Decription Here</p>
-			</div>
-		</a>
-	</div>
-	<div class="col-sm-4 col-xs-6 welcome-product">
-		<a href="#">
-			<%= image_tag("dessert.jpg", class: "img-responsive") %>
-			<div class="seller-info">
-				<h3 class="seller-name">Seller Name</h3>
-				<p class="product-descr">Product Decription Here</p>
-			</div>
-		</a>
-	</div>
-	<div class="col-sm-4 col-xs-6 welcome-product">
-		<a href="#">
-			<%= image_tag("brownies.jpg", class: "img-responsive") %>
-			<div class="seller-info">
-				<h3 class="seller-name">Seller Name</h3>
-				<p class="product-descr">Product Decription Here</p>
-			</div>
-		</a>
-	</div>
-	<div class="col-sm-4 col-xs-6 welcome-product">
-		<a href="#">
-			<%= image_tag("blueberry.jpg", class: "img-responsive") %>
-			<div class="seller-info">
-				<h3 class="seller-name">Seller Name</h3>
-				<p class="product-descr">Product Decription Here</p>
-			</div>
-		</a>
-	</div>
+	<% @products.each do |product| %>
+		<div class="col-sm-4 col-xs-6 welcome-product">
+			<a href="#">
+				<%= link_to image_tag(product.photo.url), class: "img-responsive", controller: 'products', action: 'show', id: product %>
+				<div class="seller-info">
+					<h3 class="seller-name"><%= product.user.to_param %></h3>
+					<p class="product-descr"><%= product.description %></p>
+				</div>
+			</a>
+		</div>
+	<% end %>
 </section><!-- /#welcome-product-grid -->
