--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -12,7 +12,7 @@
               <strong>Joined</strong>
             </span>
           </li>
-          <li class="list-group-item text-right">Somewhere, USA
+          <li class="list-group-item text-right"><%= @user.city %>, <%= @user.state %>
             <span class="pull-left">
               <strong>Location</strong>
             </span>
