--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,6 +22,12 @@
   <%= f.label :about_me %><br>
   <%= f.text_area :about, placeholder: "Tell us about yourself." %>
 
+  <div><%= f.label :City %><br>
+  <%= f.text_field :city %></div>
+                
+  <div><%= f.label :State %><br>
+  <%= f.text_field :state %></div>
+
   <div><%= f.submit "Update" %></div>
 <% end %>
 
@@ -30,3 +36,4 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+
