--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -13,7 +13,7 @@
     <![endif]-->
 
     <%= stylesheet_link_tag "application", :media => "all" %>
-    
+    <%= stylesheet_link_tag "products", :media => "all" %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
@@ -37,74 +37,39 @@
 
     <%= javascript_include_tag "application" %>
   </head>
-  <body class="default">
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Leema</a>
+  <body class="<%= body_class %>" id="<%= @body_id || 'default' %>" data-hook="body">
+
+    <div class="container">
+
+      <%= render :partial => 'spree/shared/header' %>
+
+      <div id="wrapper" class="row" data-hook>
+
+        <%= breadcrumbs(@taxon) %>
+
+        <%= render :partial => 'spree/shared/sidebar' if content_for? :sidebar %>
+
+        <div id="content" class="columns <%= !content_for?(:sidebar) ? "sixteen" : "twelve omega" %>" data-hook>
+          <%= flash_messages %>
+          <%= yield %>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <% if signed_in? %>
-              <li class='navbar-img'>
-                <%= image_tag current_user.gravatar_url, class: 'navbar-brand' %>
-              </li>
-              <li>
-                <a href="/<%= current_user.id %>"><%= current_user.first_name %></a>
-              </li>
-              <li><%= link_to "Browse", products_path %></li>
-              
-              <li><%= link_to "Log Out", spree_logout_path %></li>
-            <% else %>
-              <li><%= link_to "Log In", signin_path %></a></li>
-              <li><%= link_to "Register", register_path %></li>
-            <% end %>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-      <!--Alert messages for Devise user authentication -->
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
-        <%= yield %>
+        <%= yield :templates %>
 
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <footer>
-                <p>&copy; Leema <%= Time.now.year %></p>
-              </footer>
-            </div>
-          </div><!--/row-->
-        </div> <!-- /container -->
+      </div>
 
-      </body>
-    <!--Facebook SDK -->
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '778387892228096',
-          xfbml      : true,
-          version    : 'v2.2'
-        });
-      };
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <footer>
+            <p>&copy; Leema <%= Time.now.year %></p>
+          </footer>
+        </div>
+      </div><!--/row-->
+    </div> <!-- /container -->
+    
+    </div>
 
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-         js.src = "//connect.facebook.net/en_US/sdk.js";
-         fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <!-- End of Facebook SDK -->
+    <%= render :partial => 'spree/shared/google_analytics' %>
+  </body>
 </html>
