--- a/app/views/layouts/products.html.erb
+++ b/app/views/layouts/products.html.erb
@@ -63,11 +63,11 @@
             <a href="/<%= current_user.id %>"><%= current_user.first_name %></a>
           </li>
           <li><%= link_to "Browse", products_path %></li>
-          <li><%= link_to "New Product", new_product_path %></li>
-          <li><%= link_to "Log Out", logout_path %></li>
+          <li><%= link_to "New Product", "#" %></li>
+          <li><%= link_to "Log Out", spree_logout_path %></li>
         <% else %>
-          <li><%= link_to "Log In", signin_path %></a></li>
-          <li><%= link_to "Register", register_path %></li>
+          <li><%= link_to "Log In", spree_signin_path %></a></li>
+          <li><%= link_to "Register", spree_register_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
