--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,15 +23,12 @@
 </section>
 
 <section id="welcome-product-grid">
-	<% @products.each do |product| %>
-		<div class="col-sm-4 col-xs-6 welcome-product">
-			<a href="#">
-				<%= link_to image_tag(product.photo.url), class: "img-responsive", controller: 'products', action: 'show', id: product %>
-				<div class="seller-info">
-					<h3 class="seller-name"><%= product.user.to_param %></h3>
-					<p class="product-descr"><%= product.description %></p>
-				</div>
-			</a>
-		</div>
-	<% end %>
+	<div class="col-sm-4 col-xs-6 welcome-product">
+		<a href="#">
+			<div class="seller-info">
+				<h3 class="seller-name"></h3>
+				<p class="product-descr"></p>
+			</div>
+		</a>
+	</div>
 </section><!-- /#welcome-product-grid -->
