--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,12 +23,16 @@
 </section>
 
 <section id="welcome-product-grid">
-	<div class="col-sm-4 col-xs-6 welcome-product">
-		<a href="#">
-			<div class="seller-info">
-				<h3 class="seller-name"></h3>
-				<p class="product-descr"></p>
-			</div>
-		</a>
-	</div>
+	<% @products.first(3).each do |product| %>
+		<div class="col-sm-4 col-xs-6 welcome-product">
+			<!--TODO: The links to the products are not routing to the /products part of the path where Spree is mounted. I'll have to work on that -->
+			<%= link_to image_tag(product.images.first.attachment.url(:large)), controller: 'products', action: 'show', id: product %>
+			<a href="#">
+				<div class="seller-info">
+					<h3 class="seller-name"><%= product.name %></h3>
+					<p class="product-descr"><%= product.description %></p>
+				</div>
+			</a>
+		</div>
+	<% end %>
 </section><!-- /#welcome-product-grid -->
