cleaning up profile pages

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -56,6 +56,30 @@
 	font-family: @font-family-serif;
 }
 
+/* Profile Page Section Covers */
+.section-cover{
+	position: relative;
+	overflow: hidden;
+	background: #000;
+	margin-bottom: 40px
+
+}
+
+.section-cover .section-cover-image {
+	width: 100%;
+	display: block;
+}
+
+.profile-image img {
+	width: 175px;
+	height: 175px;
+	margin-top: -127px;
+}
+
+.about-user {
+	padding-top: 50px;
+}
+
 @media (max-width: 767px) {
 
 }
