--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,71 +1,66 @@
 <body>
+  <div class="section-cover">
+    <img class="section-cover-image img-responsive" src="http://placehold.it/2000x580">
+
+  </div>
   <div class="container">
-    <div class="row main">
-      <!-- Start Left Side -->
-      <div class="col-xs-12 col-sm-3 text-center">
-        <%= image_tag @user.gravatar_url, class: 'center-block img-circle img-thumbnail img-responsive' %>
-
-        <ul class="list-group">
-          <li class="list-group-item text-muted"><%= @user.full_name %></li>
-          <li class="list-group-item text-right"><%= @user.created_at.strftime('%B %e, %Y') %>
-            <span class="pull-left">
-              <strong>Joined</strong>
-            </span>
-          </li>
-          <li class="list-group-item text-right"><%= @user.city %>, <%= @user.state %>
-            <span class="pull-left">
-              <strong>Location</strong>
-            </span>
-          </li>
-          <li class="list-group-item text-right"><%= @user.products.count %>
-            <span class="pull-left">
-              <strong>Products</strong>
-            </span>
-          </li>
-        </ul>
+    <div class="row">
+      <div class="pull-right">
+        <% if @user == current_user %>
+        <%= link_to "Edit Profile", edit_path(@user) %>
+        <% end %>
       </div>
-      <!-- End Left Side -->
-      <div class="clearfix visible-xs"></div>
-      <!-- Start Right Side -->
-      <div class="col-xs-12 col-sm-9">
-        <!-- Start About Me -->
-        <div class="row">
-          <div class="col-xs-12 col-sm-12">
-            <h2>About <%= @user.first_name %>:</h2>
-            <div class="text-area"><%= @user.about %></div>
-            <% if @user == current_user %>
-            <%= link_to "Edit", edit_path(@user) %>
-            <% end %>
-          </div>
+      <div class="col-sm-4">
+        <div class="profile-image">
+          <%= image_tag @user.gravatar_url, class: 'center-block img-thumbnail img-responsive' %>
         </div>
-        <!-- End About Me -->
+        <h3><%= @user.full_name %></h3>
+        <p class="text-muted"><i class="fa fa-map-marker"></i>  <%= @user.city %>, <%= @user.state %></p>
+        <p class="text-muted"><i class="fa fa-clock-o"></i> Joined <%= @user.created_at.strftime('%B %Y') %></p>
+        <p class="text-muted"><%= @user.products.count %> Products Listed</p>
+      </div>
 
-            <!-- Start Latest Projects -->
-            <h2>Products</h2>
-            <div class="row">
-              <% @user.products.each do |product| %>
-                <div class="col-sm-6 col-md-4">
-                  <div class="thumbnail">
-                    <%= link_to image_tag(product.photo.url), controller: 'products', action: 'show', id: product %>
-                    <div class="caption">
-                      <h3><%= product.name %></h3>
-                      <% if current_user == product.user %>
-                        <p><em>You posted this product <%= time_ago_in_words(product.created_at) %> ago.</em></p>
-                        <p><%= link_to t('.edit', :default => t("helpers.links.edit")),
-                                    edit_product_path(product), :class => 'btn btn-default btn-xs' %>
-                        <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                                    product_path(product),
-                                    :method => :delete,
-                                    :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                                    :class => 'btn btn-xs btn-danger' %></p>
-                      <% else %>
-                        <p><em><%= humanized_money_with_symbol product.price %></em></p>
-                        <p><%= link_to "Add to cart", product_path(product), class: 'btn btn-primary' %></p>
-                      <% end %>
-                    </div>
-                  </div>
-                </div>
-              <% end %>
+      <div class="col-sm-8">
+        <div class="about-user"><%= @user.about %></div>
+      </div>
+
+    </div><!-- close .row -->
+  </div><!-- close .container -->
+
+  <div class="container products">
+    <div class="row">
+      <div class="col-xs-12">
+        <h3>Products</h3>
+
+        <% @user.products.each do |product| %>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <%= link_to image_tag(product.photo.url), controller: 'products', action: 'show', id: product %>
+              <div class="caption">
+                <h3><%= product.name %></h3>
+                <% if current_user == product.user %>
+                  <p><em>You posted this product <%= time_ago_in_words(product.created_at) %> ago.</em></p>
+                  <p><%= link_to t('.edit', :default => t("helpers.links.edit")),
+                              edit_product_path(product), :class => 'btn btn-default btn-xs' %>
+                  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                              product_path(product),
+                              :method => :delete,
+                              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                              :class => 'btn btn-xs btn-danger' %></p>
+                <% else %>
+                  <p><em><%= humanized_money_with_symbol product.price %></em></p>
+                  <p><%= link_to "Add to cart", product_path(product), class: 'btn btn-primary' %></p>
+                <% end %>
+              </div>
             </div>
           </div>
+        <% end %>
+
+      </div><!-- close .col-xs-12 -->
+    </div><!-- close .row -->
+  </div><!-- close .container -->
+
+
+
+
 </body>
