--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -30,7 +30,9 @@
   <div class="container products">
     <div class="row">
       <div class="col-xs-12">
-        <h3>Products</h3>
+        <div class="page-header">
+          <h3>Products</h3>
+        </div>
 
         <% @user.products.each do |product| %>
           <div class="col-sm-6 col-md-4">
