more profile tweaks

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="col-sm-8">
-        <div class="about-user"><%= @user.about %></div>
+        <div class="about-user"><p class="lead"><%= @user.about %></p></div>
       </div>
 
     </div><!-- close .row -->
