--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,39 +1,59 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+  <div class="row">
+    <div class="clearfix">
+      <h2>Edit Profile</h2>
+      <div class="pull-right">
+        <%= link_to "Back", :back %>
+      </div>
+    </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+          <p class="help-block">(leave blank if you don't want to change it)</p>
+        </div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
+        </div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+        <div class="form-group">
+          <%= f.label :current_password %>
+          <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
+          <p class="help-block">(we need your current password to confirm your changes)</p>
+        </div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+        <div class="form-group">
+          <%= f.label :about_me %>
+          <%= f.text_area :about, placeholder: "Tell us about yourself.", class: 'form-control', rows: '4' %>
+        </div>
 
-  <%= f.label :about_me %><br>
-  <%= f.text_area :about, placeholder: "Tell us about yourself." %>
+        <div class="form-group">
+          <%= f.label :City %>
+          <%= f.text_field :city, class: 'form-control' %>
+        </div>
 
-  <div><%= f.label :City %><br>
-  <%= f.text_field :city %></div>
-                
-  <div><%= f.label :State %><br>
-  <%= f.text_field :state %></div>
+        <div class="form-group">
+          <%= f.label :State %>
+          <%= f.text_field :state, class: 'form-control' %>
+        </div>
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
-
+        <div><%= f.submit "Update", :class => "btn btn-primary" %></div>
+        <div class="text-right">
+          <p><small>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></small></p>
+        </div>
+      <% end %>
+  </div><!-- close .row -->
+</div><!-- close .container -->
