--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="sign-in-reg">  
+<div class="sign-in-reg">
   <div class="container form">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
@@ -12,15 +12,15 @@
               <h2>Sign Up</h2>
             </legend>
             <div class="form-group">
-              <div><%= f.label :first_name %><br />
+              <div><%= f.label :first_name %>
               <%= f.text_field :first_name, autofocus: true, class: 'form-control input_wide' %></div>
             </div>
             <div class="form-group">
-              <div><%= f.label :last_name %><br />
+              <div><%= f.label :last_name %>
               <%= f.text_field :last_name, class: 'form-control input_wide' %></div>
             </div>
             <div class="form-group">
-              <div><%= f.label :email %><br />
+              <div><%= f.label :email %>
               <%= f.email_field :email, class: 'form-control input_wide' %></div>
             </div>
             <div class="form-group">
@@ -28,7 +28,7 @@
                 <%= f.password_field :password, autocomplete: "off", class: 'form-control input_wide' %></div>
             </div>
             <div class="form-group">
-              <div><%= f.label :password_confirmation %><br />
+              <div><%= f.label :password_confirmation %>
                 <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control input_wide' %></div>
             </div>
           </fieldset>
