--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -90,6 +90,23 @@
 }
 
 @media (max-width: 767px) {
+	.profile-image {
+			margin-top: 0px;
+
+				img {
+					width: 175px;
+					height: 175px;
+				}
+
+				.img-thumbnail {
+					background-color: @brand-primary;
+					padding: 2px;
+				}
+		}
+
+	.about-user {
+		padding-top: 20px;
+	}
 
 }
 
