--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -71,6 +71,10 @@
 	display: block;
 }
 
+.edit-profile {
+	float: right;
+}
+
 .profile-image {
 	margin-top: -127px;
 
@@ -90,6 +94,10 @@
 }
 
 @media (max-width: 767px) {
+	.section-cover {
+		margin-bottom: 20px;
+	}
+
 	.profile-image {
 			margin-top: 0px;
 
@@ -103,6 +111,12 @@
 					padding: 2px;
 				}
 		}
+
+	.edit-profile {
+		float: none;
+		text-align: right;
+		margin-bottom: 20px;
+	}
 
 	.about-user {
 		padding-top: 20px;
