--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="pull-right">
+      <div class="edit-profile">
         <% if @user == current_user %>
         <%= link_to "Edit Profile", edit_path(@user) %>
         <% end %>
