--- a/app/views/spree/layouts/spree_application.html.erb
+++ b/app/views/spree/layouts/spree_application.html.erb
@@ -8,7 +8,9 @@
     <%= render :partial => 'spree/shared/head' %>
   </head>
   <body class="<%= body_class %>" id="<%= @body_id || 'default' %>" data-hook="body">
-
+    <style type="text/css">
+      #wrapper {height: 3000px;}
+    </style>
     <div class="container">
 
       <%= render :partial => 'spree/shared/header' %>
@@ -16,21 +18,29 @@
       <div id="wrapper" class="row" data-hook>
 
         <%= breadcrumbs(@taxon) %>
-
-        <%= render :partial => 'spree/shared/sidebar' if content_for? :sidebar %>
-
-        <div id="content" class="columns <%= !content_for?(:sidebar) ? "sixteen" : "twelve omega" %>" data-hook>
+        <div class="col-md-3" id="sidebar">
+          <%= render :partial => 'spree/shared/sidebar' if content_for? :sidebar %>
+        </div>
+        <div id="content" class="col-md-9 <%= !content_for?(:sidebar) ? "sixteen" : "twelve omega" %>" data-hook>
           <%= flash_messages %>
           <%= yield %>
         </div>
 
         <%= yield :templates %>
 
-      </div>
+      </div><!-- close .row -->
 
-      <%= render :partial => 'spree/shared/footer' %>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <footer>
+              <p>&copy; Leema <%= Time.now.year %></p>
+            </footer>
+          </div>
+        </div><!--/row-->
+      </div> <!-- /container -->
 
-    </div>
+    </div><!-- close .container -->
 
     <%= render :partial => 'spree/shared/google_analytics' %>
   </body>
