--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -23,10 +23,7 @@ table th.actions [class*='fa-'].no-text, table td.actions [class*='fa-'].no-text
 	border-bottom: none;
 }
 
-#content-header h1 {
-	margin-top: 10px;
-}
-
-#sidebar .sidebar-title > span {
-	top: -18px;
+.pagination {
+	display: block;
+	text-align: left;
 }
