--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -32,10 +32,10 @@
 
 @text-color: #6c6f70;
 @link-color: #212121;
-@link-hover-color: darken(@link-color, 15%);
+@link-hover-color: #E91E63;
 @link-hover-decoration: none;
 
-@headings-color:#212121;
+@headings-color:#424242;
 
 // Nav Overrides
 @navbar-height: 100px;
