--- a/app/assets/stylesheets/welcome/welcome.css.scss
+++ b/app/assets/stylesheets/welcome/welcome.css.scss
@@ -1,5 +1,9 @@
 // Masthead
 
+.homepage .navbar-default {
+    background: transparent;
+}
+
 .masthead {
     position: relative;
     padding: 30px 15px;
