--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -30,13 +30,13 @@
 // Fonts
 @font-family-serif: 'lavanderia_regular', Georgia, "Times New Roman", Times, serif;
 
-@text-color: #6c6f70;
-@headings-color: #424242;
+@text-color: #676767;
+@headings-color: #555;
 @link-color: #212121;
 @link-hover-color: #E91E63;
 @link-hover-decoration: none !important;
 
-@headings-color:#424242;
+@border-radius-base: 0px;
 
 // Nav Overrides
 @navbar-height: 100px;
@@ -45,6 +45,15 @@
 @navbar-margin-bottom: 0px;
 @brand-primary: #E91E63;
 @navbar-default-border: none;
+@navbar-default-link-color: #808080;
+@navbar-default-link-hover-color: #000;
+
+::selection {
+  background: @link-hover-color; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: @link-hover-color; /* Gecko Browsers */
+}
 
 p {
 	padding: 0px;
@@ -179,6 +188,15 @@ a:hover {
 	border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 
+.product-image {
+	width: 100%;
+	padding-bottom: 66.666%;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	height: 100%;
+}
+
 .product-link:hover {
 
 	.product-card {
@@ -203,4 +221,5 @@ a:hover {
 
 .product-info h3 {
 	margin-top: 0px;
+	min-height: 55px;
 }
