Added cover photo to user profile.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -41,6 +41,11 @@
         </div>
 
         <div class="form-group">
+          <%= f.label :cover_photo %>
+          <%= f.file_field :cover_photo %>
+        </div>
+
+        <div class="form-group">
           <%= f.label :City %>
           <%= f.text_field :city, class: 'form-control' %>
         </div>
