custom products layout

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -48,6 +48,7 @@
 @navbar-default-link-color: #808080;
 @navbar-default-link-hover-color: #000;
 
+// Other Overrides
 ::selection {
   background: @link-hover-color; /* WebKit/Blink Browsers */
 }
@@ -169,7 +170,7 @@ a:hover {
 }
 
 
-/* Products */
+/* Products Browse */
 .product-link {
 	display: block;
 }
@@ -222,4 +223,9 @@ a:hover {
 .product-info h3 {
 	margin-top: 0px;
 	min-height: 55px;
+}
+
+/* Products Landing Page */
+#product-images #main-image {
+	border: none;
 }
