--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="edit-profile">
         <% if @user == current_user %>
-        <%= link_to "Edit Profile", edit_path(@user) %>
+        <%= link_to "Edit Profile", edit_path(@user), class: 'btn btn-primary' %>
         <% end %>
       </div>
       <div class="col-sm-4">
