Updated profiles show page.

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -37,7 +37,7 @@
           <h3>Products</h3>
         </div>
 
-        <% @user.products.each do |product| %>
+      <!--  <% @user.products.each do |product| %>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
               <%= link_to image_tag(product.photo.url), controller: 'products', action: 'show', id: product %>
@@ -59,7 +59,7 @@
               </div>
             </div>
           </div>
-        <% end %>
+        <% end %>-->
 
       </div><!-- close .col-xs-12 -->
     </div><!-- close .row -->
