--- a/app/views/layouts/products.html.erb
+++ b/app/views/layouts/products.html.erb
@@ -63,7 +63,9 @@
             <a href="/<%= current_user.id %>"><%= current_user.first_name %></a>
           </li>
           <li><%= link_to "Browse", products_path %></li>
-          <li><%= link_to "New Product", new_admin_product_path %></li>
+          <% if spree_current_user.has_spree_role?("admin") %>
+            <li><%= link_to "New Product", new_admin_product_path %></li>
+          <% end %>
           <li><%= link_to "Log Out", spree_logout_path %></li>
         <% else %>
           <li><%= link_to "Log In", spree_signin_path %></a></li>
