--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -22,10 +22,12 @@
             <a href="/<%= current_user.id %>"><%= current_user.first_name %></a>
           </li>
           <% if current_user.has_spree_role?("admin") %>
-          <li><%= link_to "My Store", admin_path %></li>
+            <li><%= link_to "My Store", admin_path %></li>
           <% end %>
           <li><%= link_to "Browse", products_path %></li>
-          <li><%= link_to "New Product", new_admin_product_path %></li>
+          <% if current_user.has_spree_role?("admin") %>
+            <li><%= link_to "New Product", new_admin_product_path %></li>
+          <% end %>
           <li><%= link_to "Log Out", spree_logout_path %></li>
         <% else %>
           <li><%= link_to "Log In", spree_signin_path %></a></li>
