--- a/app/views/spree/shared/_rating.html.erb
+++ b/app/views/spree/shared/_rating.html.erb
@@ -13,3 +13,27 @@
     <meta itemprop="reviewCount" content="<%= reviews_count %>" />
   </div>
 </div>
+<!-- Facebook Like/Share Buttons -->
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '778387892228096',
+      xfbml      : true,
+      version    : 'v2.2'
+    });
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
