--- a/app/views/spree/shared/_header.html.erb
+++ b/app/views/spree/shared/_header.html.erb
@@ -30,8 +30,8 @@
           <% end %>
           <li><%= link_to "Log Out", spree_logout_path %></li>
         <% else %>
-          <li><%= link_to "Log In", spree_signin_path %></a></li>
-          <li><%= link_to "Register", spree_register_path %></li>
+          <li><%= link_to "Log In", spree_login_path %></a></li>
+          <li><%= link_to "Register", spree_signup_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
