color scheme and logo enhancements

--- a/app/assets/stylesheets/signin/signin.css.scss
+++ b/app/assets/stylesheets/signin/signin.css.scss
@@ -47,7 +47,7 @@
 
 .form-header {
 	position: relative;
-	background: #ed009c;
+	background: #3a89ff;
 	padding: 20px 0 25px;
 	-webkit-border-radius: 8px 8px 0 0;
 	-moz-border-radius: 8px 8px 0 0;
@@ -66,5 +66,5 @@
 	margin-left: -8px;
 	border-left: 8px solid rgba(0, 0, 0, 0);
 	border-right: 8px solid rgba(0, 0, 0, 0);
-	border-top: 8px solid #ed009c;
+	border-top: 8px solid #3a89ff;
 }
