--- a/app/assets/stylesheets/spree/backend/globals/_variables_override.scss
+++ b/app/assets/stylesheets/spree/backend/globals/_variables_override.scss
@@ -7,11 +7,11 @@
   --------------------------------------------------------- */
 $color-1:                        #FFFFFF !default;    // White
 $color-2:                        #3F51B5 !default;    // Blueish
-$color-3:                        #5498DA !default;    // Light Blue
+$color-3:                        #3a89ff !default;    // Light Blue
 $color-4:                        #212121 !default;    // Dark Grey
 $color-5:                        #C60F13 !default;    // Red
 $color-6:                        #FF9300 !default;    // Yellow
-$color-7:                        #E91E63 !default;    // Pink
+$color-7:                        #3a89ff !default;    // Pink
 $color-8:												 #676767 !default;    // Lightest Grey
 $color-9:												 #555555 !default;    // Light Grey
 
