--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -28,12 +28,12 @@
 @body-bg: #f8f8f8;
 
 // Fonts
-@font-family-serif: 'lavanderia_regular', Georgia, "Times New Roman", Times, serif;
+@font-family-serif: 'ABeeZee', Georgia, "Times New Roman", Times, serif;
 
 @text-color: #676767;
 @headings-color: #555;
 @link-color: #212121;
-@link-hover-color: #E91E63;
+@link-hover-color: #3a89ff;
 @link-hover-decoration: none !important;
 
 @border-radius-base: 0px;
@@ -41,9 +41,9 @@
 // Nav Overrides
 @navbar-height: 100px;
 @navbar-default-bg: #ffffff;
-@navbar-default-brand-color: #E91E63;
+@navbar-default-brand-color: #3a89ff;
 @navbar-margin-bottom: 0px;
-@brand-primary: #E91E63;
+@brand-primary: #3a89ff;
 @navbar-default-border: none;
 @navbar-default-link-color: #808080;
 @navbar-default-link-hover-color: #000;
@@ -71,11 +71,10 @@ a:hover {
 .navbar {
 	z-index: 1000;
 }
-.navbar-brand {
-	font-family: @font-family-serif;
-	font-size: 50px;
-	line-height: 27px;
-	color: @navbar-default-brand-color;
+.logo img{
+	max-height: @navbar-height;
+	width: auto;
+	padding: 10px;
 }
 
 .logo {
