--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Leema</a>
+          <a class="logo" href="/"><%= image_tag "leema-logo.png", class: 'img-responsive' %></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
