--- a/app/views/spree/admin/shared/_header.html.erb
+++ b/app/views/spree/admin/shared/_header.html.erb
@@ -2,7 +2,8 @@
 	<nav class="navbar navbar-default navbar-seller" role="navigation">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
-	      <div data-hook><%= link_to "Leema", spree.admin_path, class: 'navbar-brand' %></div>
+	      <div data-hook><%= link_to image_tag("leema-logo.png"), spree.admin_path, class: 'logo'  %></div>
+
 	    </div>
 	</nav>
 </header>
