commenting out css

--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -82,10 +82,10 @@ a:hover {
 	font-family: @font-family-serif;
 }
 
-.logo:hover {
+/*.logo:hover {
 	color:darken(@navbar-default-brand-color, 5%) !important;
 	text-decoration: none;
-}
+}*/
 
 .logo-inverse {
 	color: #fff;
