Added postmates image and un commented product controller decorator

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,6 +22,7 @@
 		<div class="row">
 			<h1 class="text-center">Welcome to <span class="logo">Leema</span></h1>
 			<p class="text-center lead">Expore the most popular treats on the market</p>
+			<%= image_tag "postmates.png", class: 'img-responsive center' %>
 		</div><!-- /.row -->
 	</div><!-- /.container -->
 </section>
