adding updated logo

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="col-sm-4">
         <div class="profile-image">
-          <%= image_tag @user.gravatar_url, class: 'center-block img-thumbnail img-responsive' %>
+          <%= image_tag @user.gravatar_url, class: 'img-thumbnail img-responsive' %>
         </div>
         <h3><%= @user.full_name %></h3>
         <p class="text-muted"><i class="fa fa-map-marker"></i>  <%= @user.city %>, <%= @user.state %></p>
