--- a/app/assets/stylesheets/signin/signin.css.scss
+++ b/app/assets/stylesheets/signin/signin.css.scss
@@ -1,36 +1,46 @@
 /* Login/Registration Pages */
 
+.signin .form {
+	padding: 0px;
+}
 
 .signin:after {
-	content: "";
-	background-image: image-url("login-bg.jpg");
-	background-position: top center;
-	background-size: cover;
-	background-repeat: no-repeat;
-	opacity: .5;
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	z-index: -1;
+	background-color: #fff;
+}
+
+@media (min-width: 768px) {
+	.signin:after {
+		content: "";
+		background-image: image-url("login-bg.jpg");
+		background-position: top center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		opacity: .5;
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		z-index: -1;
+	}
+
+	.signin .form {
+		padding: 50px 0;
+	}
+
+	.sign-in-reg {
+		position: absolute;
+	    top: 50%;
+	    left: 50%;
+	    margin-right: -50%;
+	    transform: translate(-50%, -50%)
+	}
 }
 
 .signin .navbar {
 	background:#fff;
 }
 
-.signin .form {
-	padding: 50px 0;
-}
-
-.sign-in-reg {
-	position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
-}
 
 .sign-in-reg .well {
 	background: #fff;
@@ -49,9 +59,7 @@
 	position: relative;
 	background: #3a89ff;
 	padding: 20px 0 25px;
-	-webkit-border-radius: 8px 8px 0 0;
-	-moz-border-radius: 8px 8px 0 0;
-	border-radius: 8px 8px 0 0;
+
 	text-align: center;
 	font-size: 40px;
 }
@@ -67,4 +75,11 @@
 	border-left: 8px solid rgba(0, 0, 0, 0);
 	border-right: 8px solid rgba(0, 0, 0, 0);
 	border-top: 8px solid #3a89ff;
+}
+
+.signin-logo {
+	width: 200px;
+	display: inline-block;
+	margin-right:5px;
+	vertical-align: middle;
 }
