updating structure of login/reg page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <div class="sign-in-reg">
   <div class="container form">
     <div class="row">
-      <div class="col-sm-6 col-sm-offset-3">
+      <div class="col-sm-6 col-sm-offset-3 col-xs-12">
         <div class="form-header logo-inverse">
-          <a href="/">Leema</a>
+          <a href="/"><%= image_tag "leema-logo-white.png", class: 'img-responsive signin-logo' %></a>
         </div>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name) , :html => {:class => "well"}) do |f| %>
           <%= devise_error_messages! %>
