--- a/app/views/spree/admin/shared/_header.html.erb
+++ b/app/views/spree/admin/shared/_header.html.erb
@@ -1,9 +1,35 @@
-<header id="header" data-hook>
-	<nav class="navbar navbar-default navbar-seller" role="navigation">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <div data-hook><%= link_to image_tag("leema-logo.png"), spree.admin_path, class: 'logo'  %></div>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="logo" href="/"><%= image_tag "leema-logo.png", class: 'img-responsive' %></a>
+    </div>
 
-	    </div>
-	</nav>
-</header>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+          <li class='navbar-img'>
+            <%= image_tag current_user.gravatar_url, class: 'navbar-brand' %>
+          </li>
+          <li>
+            <a href="/<%= current_user.id %>"><%= current_user.first_name %></a>
+          </li>
+          <% if current_user.has_spree_role?("admin") %>
+            <li><%= link_to "My Store", admin_path %></li>
+          <% end %>
+          <li><%= link_to "Browse", products_path %></li>
+          <% if current_user.has_spree_role?("admin") %>
+            <li><%= link_to "New Product", new_admin_product_path %></li>
+          <% end %>
+          
+          <li><%= link_to "Log Out", spree_logout_path %></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
