--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -35,3 +35,11 @@ fieldset .filter-actions button, fieldset .filter-actions .button, fieldset .fil
 	-o-box-shadow: none;
 	-moz-box-shadow: none;
 }
+
+#admin-menu li .dropdown {
+	right:0;
+}
+
+#admin-menu li .dropdown > li {
+	display:block;
+}
