--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -71,9 +71,15 @@ a:hover {
 .navbar {
 	z-index: 1000;
 }
+
 .logo img{
 	width: 295px;
 	padding: 10px;
+	z-index: 1001;
+}
+
+.navbar-toggle {
+	z-index: 1002;
 }
 
 @media (max-width: 420px) {
