--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -38,6 +38,7 @@ fieldset .filter-actions button, fieldset .filter-actions .button, fieldset .fil
 
 #admin-menu li .dropdown {
 	right:0;
+	display:block;
 }
 
 #admin-menu li .dropdown > li {
