adding meta tags

--- a/app/views/spree/shared/_head.html.erb
+++ b/app/views/spree/shared/_head.html.erb
@@ -1,7 +1,8 @@
 <meta charset="utf-8">
 <title><%= title %></title>
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-<meta content="width=device-width, initial-scale=1.0, maximum-scale=1" name="viewport">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%== meta_data_tags %>
 <%= canonical_tag(current_store.url) %>
 <%= favicon_link_tag 'favicon.ico' %>
