--- a/app/views/spree/admin/shared/_head.html.erb
+++ b/app/views/spree/admin/shared/_head.html.erb
@@ -1,5 +1,6 @@
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%= csrf_meta_tags %>
 
 <title>
