--- a/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/global/bootstrap_and_overrides.css.less
@@ -82,6 +82,11 @@ a:hover {
 	z-index: 1002;
 }
 
+.gravatar {
+	width: 20px;
+	margin-right: 3px;
+}
+
 @media (max-width: 420px) {
 	.logo img{
 		width: 220px;
