adding new bg image for sign up

--- a/app/assets/stylesheets/signin/signin.css.scss
+++ b/app/assets/stylesheets/signin/signin.css.scss
@@ -11,7 +11,7 @@
 @media (min-width: 768px) {
 	.signin:after {
 		content: "";
-		background-image: image-url("login-bg.jpg");
+		background-image: image-url("login-bg-alt.jpg");
 		background-position: top center;
 		background-size: cover;
 		background-repeat: no-repeat;
