--- a/app/assets/stylesheets/spree/backend/globals/_variables_override.scss
+++ b/app/assets/stylesheets/spree/backend/globals/_variables_override.scss
@@ -7,7 +7,7 @@
   --------------------------------------------------------- */
 $color-1:                        #FFFFFF !default;    // White
 $color-2:                        #3F51B5 !default;    // Blueish
-$color-3:                        #3a89ff !default;    // Light Blue
+$color-3:                        #3a89ff !default;    // Leema Blue
 $color-4:                        #212121 !default;    // Dark Grey
 $color-5:                        #C60F13 !default;    // Red
 $color-6:                        #FF9300 !default;    // Yellow
