--- a/app/assets/stylesheets/spree/frontend/_variables.scss
+++ b/app/assets/stylesheets/spree/frontend/_variables.scss
@@ -7,7 +7,7 @@ $c_red:         #e45353 !default;  /* Error red      */
 $layout_background_color:   #FFFFFF !default;
 $title_text_color:          #404042 !default;
 $body_text_color:           #404042 !default;
-$link_text_color:           #00ADEE !default;
+$link_text_color:           #3a89ff !default;
 
 $product_background_color:  #FFFFFF !default;
 $product_title_text_color:  #404042 !default;
