layout updates to product page

--- a/app/assets/stylesheets/spree/frontend/screen.css.scss
+++ b/app/assets/stylesheets/spree/frontend/screen.css.scss
@@ -634,6 +634,10 @@ ul#products {
   }
 }
 
+.share-product {
+  margin-bottom: 10px;
+}
+
 /*--------------------------------------*/
 /* Reviews
 /*--------------------------------------*/
