--- a/app/views/spree/shared/_rating.html.erb
+++ b/app/views/spree/shared/_rating.html.erb
@@ -13,13 +13,10 @@
     <meta itemprop="reviewCount" content="<%= reviews_count %>" />
   </div>
 </div>
-<!-- Facebook Like/Share Buttons -->
-<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
+<div class="share-product">
+  <!-- Facebook Like/Share Buttons -->
+  <div class="fb-like" data-share="true" data-width="300px" data-show-faces="false" data-layout="button"></div>
+</div><!-- close .share-product -->
 <script>
   window.fbAsyncInit = function() {
     FB.init({
