--- a/app/views/layouts/products.html.erb
+++ b/app/views/layouts/products.html.erb
@@ -59,7 +59,7 @@
           <li>
             <a href="/<%= current_user.id %>"><%= image_tag current_user.gravatar_url, class: 'gravatar' %> <%= current_user.first_name %></a>
           </li>
-          <li><%= link_to "Browse", products_path %></li>
+          <li><%= link_to "Browse", root_path %></li>
           <% if spree_current_user.has_spree_role?("admin") %>
             <li><%= link_to "New Product", new_admin_product_path %></li>
           <% end %>
