--- a/app/views/spree/admin/shared/_header.html.erb
+++ b/app/views/spree/admin/shared/_header.html.erb
@@ -20,7 +20,7 @@
           <% if current_user.has_spree_role?("admin") %>
             <li><%= link_to "My Store", admin_path %></li>
           <% end %>
-          <li><%= link_to "Browse", products_path %></li>
+          <li><%= link_to "Browse", root_path %></li>
           <% if current_user.has_spree_role?("admin") %>
             <li><%= link_to "New Product", new_admin_product_path %></li>
           <% end %>
